--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ window.addEventListener("DOMContentLoaded", init);
       <div class="container">
         <div class="d-sm-flex align-items-center justify-content-center">
           <div>
-          <img class="img-fluid p-2" src="Logo.png">
+          <img class="img-fluid p-2" src="Logo1.png">
          
          <p style="font-size:12px" class="text-warning">English Medium co-education school, 10+2, Affiliated to C. I. S. C. E </p>
          
